[package]
name = "dvs-server"
description = """
HTTP server for DVS (Data Version System).

Provides a RESTful API for remote storage access:
- GET/POST /api/v1/files/:hash - Download/upload files by hash
- GET/POST /api/v1/metadata/:hash - File metadata operations
- Authentication: API keys and JWT support
- Storage backend: Local filesystem with content-addressable structure
"""
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dvs-core.workspace = true

# HTTP server (lightweight)
tiny_http.workspace = true

# Serialization (for API)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
blake3.workspace = true
