[package]
name = "dvs-testkit"
description = """
Test utilities and conformance harness for DVS (Data Version System).

Provides reusable helpers for integration testing:
- TestRepo: Temp repository with git init and storage setup
- WorkspaceSnapshot: Capture and compare DVS workspace state
- InterfaceRunner trait: Run operations through CLI, R, server, etc.
- Scenario: Define setup + operations + expected consequences
"""
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Internal crates
dvs-core.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# File system
fs-err.workspace = true
walkdir.workspace = true

# Utilities
chrono.workspace = true

# Git
git2.workspace = true

# Test utilities
tempfile = "3.24"

# Process execution for CLI runner
assert_cmd = { version = "2.0", optional = true }
predicates = { version = "3.1", optional = true }

[features]
default = []
cli-runner = ["dep:assert_cmd", "dep:predicates"]

[dev-dependencies]
