[package]
name = "dvs"
edition = '2024'

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9"
fs-err = "3"
log = "0.4.29"
env_logger = "0.11.8"

blake3 = "1.8.3"
glob = "0.3"
md5 = "0.8.0"
jiff = "0.2.18"
anyhow = "1.0.100"
whoami = "2"

clap = {optional = true, version = "4.5.54", features = ["derive"]}

[dev-dependencies]
tempfile = "3.24.0"

[features]
cli = ["dep:clap"]

[[bin]]
name = "dvs"
required-features = ["cli"]
