[package]
name = "dvs"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
fs-err.workspace = true
log.workspace = true

blake3.workspace = true
globset.workspace = true
walkdir.workspace = true
md5.workspace = true
jiff.workspace = true
anyhow.workspace = true
whoami.workspace = true

clap = {optional = true, version = "4.5.54", features = ["derive"]}
env_logger = "0.11.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs"] }

[dev-dependencies]
tempfile = "3.24.0"

[features]
cli = ["dep:clap"]

[[bin]]
name = "dvs"
required-features = ["cli"]
