[package]
name = "dvs"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
fs-err.workspace = true
log.workspace = true

blake3.workspace = true
globset.workspace = true
walkdir.workspace = true
md5.workspace = true
jiff.workspace = true
anyhow.workspace = true
whoami.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user", "fs"] }

[dev-dependencies]
tempfile = "3.24.0"
